--- a/src/common/App.css
+++ b/src/common/App.css
@@ -1,3 +1,12 @@
 .app {
   background-color: #f0f2f5;
 }
+
+.load-page {
+  font-weight: bold;
+  font-size: 50px;
+  color: #1877f2;
+  width: 100px;
+  margin: 50px auto;
+  padding: 50px;
+}
